Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -12,6 +12,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat optio cupiditate eos repudiandae blanditiis culpa id impedit. Nisi, ipsam dignissimos officiis velit, fugiat ea, ipsa possimus quidem recusandae earum laborum?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis natus recusandae eveniet quod ipsum libero in, laudantium odit tenetur, iusto amet autem praesentium. Tempora est, vitae ab facilis possimus perspiciatis?</p>
 </body>
 
 </html>
